.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/similar-2.7.0/src/algorithms/snapshots/similar__algorithms__lcs__same.snap
---
source: src/algorithms/lcs.rs
assertion_line: 235
expression: d.ops()
---
[
    Equal {
        old_index: 0,
        new_index: 0,
        len: 8,
    },
]
